--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,3 @@
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #121212;
-    color: white;
-    display: flex;
-}
-
 .container {
     display: flex;
     width: 100%;
@@ -107,22 +99,17 @@ h1 {
     padding: 5px 10px;
     font-weight: bold;
 }
-
-.blob {
-    position: absolute;
-    width: 60vmin;
-    height: 60vmin;
-    animation: morph 8s infinite alternate ease-in-out;
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
-
-@keyframes morph {
-    0% {
-        d: path("M50,10 C90,-20 110,50 90,90 C70,130 20,120 10,80 C0,40 10,20 50,10");
-    }
-    50% {
-        d: path("M50,10 C110,20 120,60 90,100 C60,140 10,120 10,70 C10,20 20,0 50,10");
-    }
-    100% {
-        d: path("M50,10 C90,-20 110,50 90,90 C70,130 20,120 10,80 C0,40 10,20 50,10");
-    }
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #121212;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
