--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,19 @@
 .container {
     display: flex;
     width: 100%;
+    height: 100%;
 }
 
 .sidebar {
-    width: 250px;
+    width: 15%;
     background-color: #1E1E1E;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
+    height: 100%;
+    text-align: center;
 }
 
 .logo {
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 20px;
 }
 
 nav ul {
@@ -26,7 +23,7 @@ nav ul {
 }
 
 nav ul li {
-    padding: 10px;
+    padding: 10%;
     text-align: center;
 }
 
@@ -112,4 +109,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.sidebar-up {
+    height: 20%;
+}
+
+.sidebar-down {
+    height: 30%;
+}
+.center-content {
+    align-content: center;
+    align-items: center;
+}
+.sidebar-middle{
+    height: 50%;
 }
