--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ nav ul li a:hover {
 
 .intro-right {
     width: 50%;
-    text-align: center;
+    height: 100%;
 }
 .intro-left {
     width: 50%;
@@ -123,3 +123,123 @@ body {
     height: 50%;
 }
 
+
+#gradient-color {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(50% 123.47% at 50% 50%, #00ff94 0%, #720059 100%), linear-gradient(121.28deg, #669600 0%, #ff0000 100%), linear-gradient(360deg, #0029ff 0%, #8fff00 100%), radial-gradient(100% 164.72% at 100% 100%, #6100ff 0%, #00ff57 100%), radial-gradient(100% 148.07% at 0% 0%, #fff500 0%, #51d500 100%);
+  background-blend-mode: screen, color-dodge, overlay, difference, normal;
+}
+
+#blob {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: visible;
+  background-color: white;
+  mix-blend-mode: multiply;
+}
+
+#blob::before {
+  content: "";
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  background-color: #000;
+}
+
+#blob::after {
+  content: "";
+  width: 34vmax;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  position: absolute;
+  background-color: #fff;
+  animation: rotate 20s infinite;
+}
+
+@keyframes rotate {
+  from {
+    rotate: 0deg;
+  }
+  50% {
+    scale: 1 1.5;
+  }
+  to {
+    rotate: 360deg;
+  }
+}
+
+#blur {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  backdrop-filter: blur(12vmax);
+}
+@keyframes flickerAnimation {
+  0%   { opacity:1; }
+  50%  { opacity:0; }
+  100% { opacity:1; }
+}
+@-o-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0; }
+  100% { opacity:1; }
+}
+@-moz-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0; }
+  100% { opacity:1; }
+}
+@-webkit-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0; }
+  100% { opacity:1; }
+}
+.flicker-animation  {
+   -webkit-animation: flickerAnimation .8s infinite;
+   -moz-animation: flickerAnimation .8s infinite;
+   -o-animation: flickerAnimation .8s infinite;
+    animation: flickerAnimation .8s infinite;
+}
+.image-background {
+    height: 70%;
+    position: absolute;
+    z-index: 1;
+    border-radius: 50%;
+    transform: rotate(135deg);
+    background-color: #1E1E1E;
+    margin-inline: auto;
+    width: 60%;
+    right: 0;
+    left: 0;
+}
+
+.image-overlay {
+    position: absolute;
+    z-index: 2;
+    margin-inline: auto;
+    width: 100%;
+    height: fit-content;
+}
+
+.intro-right-overlay {
+    position: relative;
+    height: 100%;
+}
+
+.bottom-bar {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    padding: 2% 0;
+    background-color: #1E1E1E;
+    width: 100%;
+    left: 0;
+    color: #adb5bd;
+}
