--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,10 @@ h1 {
     font-size: 20px;
 }
 
+.role span {
+    color: #FFD700;
+}
+
 .say-hello {
     margin-top: 20px;
     padding: 10px 20px;
@@ -122,64 +126,6 @@ body {
     height: 50%;
 }
 
-
-#gradient-color {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(50% 123.47% at 50% 50%, #00ff94 0%, #720059 100%), linear-gradient(121.28deg, #669600 0%, #ff0000 100%), linear-gradient(360deg, #0029ff 0%, #8fff00 100%), radial-gradient(100% 164.72% at 100% 100%, #6100ff 0%, #00ff57 100%), radial-gradient(100% 148.07% at 0% 0%, #fff500 0%, #51d500 100%);
-  background-blend-mode: screen, color-dodge, overlay, difference, normal;
-}
-
-#blob {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  overflow: visible;
-  background-color: white;
-  mix-blend-mode: multiply;
-}
-
-#blob::before {
-  content: "";
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  background-color: #000;
-}
-
-#blob::after {
-  content: "";
-  width: 34vmax;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  position: absolute;
-  background-color: #fff;
-  animation: rotate 20s infinite;
-}
-
-@keyframes rotate {
-  from {
-    rotate: 0deg;
-  }
-  50% {
-    scale: 1 1.5;
-  }
-  to {
-    rotate: 360deg;
-  }
-}
-
-#blur {
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  backdrop-filter: blur(12vmax);
-}
 @keyframes flickerAnimation {
   0%   { opacity:1; }
   50%  { opacity:0; }
@@ -241,8 +187,4 @@ body {
     width: 100%;
     left: 0;
     color: #adb5bd;
-}
-
-.primary-color{
-    color: #FFD700;
 }
