--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ nav ul li a:hover {
 
 /* Content */
 .content {
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -197,7 +198,7 @@ html, body {
     height: 100%;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #121212;
+    background-color: #121214;
     color: white;
 }
 
